--- a/app/src/main/res/layout/gym_line_item_layout.xml
+++ b/app/src/main/res/layout/gym_line_item_layout.xml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/cardview_background"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="32dp"
+    app:cardElevation="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:background="@drawable/card_style">
 
         <ImageView
             android:id="@+id/equipment_imageview"
-            android:layout_width="128px"
-            android:layout_height="128px"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_width="112dp"
+            android:layout_height="112dp"
+            android:layout_margin="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintBottom_toTopOf="@id/guideline"
+            android:contentDescription="@string/equipment_image_text" />
 
         <TextView
             style="@style/BasicText"
             android:id="@+id/name_textview"
+            android:textAllCaps="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@id/equipment_imageview"
-            app:layout_constraintTop_toTopOf="@id/equipment_imageview" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             style="@style/BasicText"
@@ -42,6 +48,23 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@id/equipment_imageview"
             app:layout_constraintTop_toBottomOf="@id/quantity_and_per_unit_price_textview" />
+        
+        <TextView
+            style="@style/BasicText"
+            android:id="@+id/description"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:visibility="visible"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/per_unit_total_price_textview"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
