--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,9 +14,32 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="TotalText">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">24dp</item>
+    </style>
+
     <style name="BasicText">
         <item name="android:layout_margin">16dp</item>
-        <item name="android:textColor">#2B335E</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="EditText" parent="BasicText">
+        <item name="android:ems">6</item>
+    </style>
+
+    <style name="CardStyle">
         <item name="android:background">#80AFFF</item>
+    </style>
+
+    <style name="BottomButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">#f8b145</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_margin">16dp</item>
     </style>
 </resources>
